--- a/orleans.html
+++ b/orleans.html
@@ -18,7 +18,7 @@ title: Orleans, Distributed Virtual Actors for Programming and Scalability Compa
 
 <table style="border: 1px solid black">
   <tr>
-    <td><h3>Orleans</h3></td>
+    <td><h3>Orleans Paper, MSR-TR-2014-41</h3></td>
     <td><h3>Comparisons to Erlang and Riak Core</h3></td>
   </tr>
   <tr>
