--- a/orleans.html
+++ b/orleans.html
@@ -8,7 +8,7 @@ title: Orleans, Distributed Virtual Actors for Programming and Scalability Compa
     <em>Philip A. Bernstein, Sergey Bykov, Allan Geller, Cabriel Kliot, Jorgen Thelin</em><br />
     Microsoft Research; Technical Report <a href="http://research.microsoft.com/apps/pubs/default.aspx?id=210931">MSR-TR-2014-41</a>
   </h1>
-  <p>Here's an in-progress comparison of the Orleans work by Microsoft,
+  <p>Here's an side-by-side comparison of the Orleans work by Microsoft,
   a virtual actor system for large-scale distributed programming, with
   Erlang and Basho's distributed programming abstraction, Riak Core.</p>
   <p>If I've got anything wrong, I kindly ask to you open a <a
