--- a/publications.html
+++ b/publications.html
@@ -7,6 +7,16 @@ title: Publications
   <h1>Publications</h1>
   <p>Publications I've been involved with:</p>
 
+  <h2>Conferences</h2>
+  <p></p>
+  <ul>
+    <li>
+      Lasp: A Language for Distributed, Coordination-Free Programming
+      <span class="author">Christopher S. Meiklejohn, Peter Van Roy</span>
+      <span class="date">to appear at The 17th International Symposium on Principles and Practice of Declarative Programming</span>
+    </li>
+  </ul>
+
   <h2>Workshops</h2>
   <p></p>
   <ul>
