Use different terminology.

--- a/publications.html
+++ b/publications.html
@@ -23,7 +23,7 @@ title: Publications
     <li>
       Lasp: A Language for Distributed, Eventually Consistent Computations with CRDTs
       <span class="author">Christopher S. Meiklejohn, Peter Van Roy</span>
-      <span class="date">PaPoC '15, co-hosted event at ACM EuroSys '15</span>
+      <span class="date">PaPoC '15, co-located event at ACM EuroSys '15</span>
       <span><a href="http://dl.acm.org/citation.cfm?id=2745954">[ACM]</a></span>
     </li>
     <li>
@@ -36,25 +36,25 @@ title: Publications
     <li>
       Derflow: distributed deterministic dataflow programming for erlang
       <span class="author">Manuel Bravo, Zhongmiao Li, Peter Van Roy, Christopher S. Meiklejohn</span>
-      <span class="date">ACM SIGPLAN Erlang Workshop '14, co-hosted event at ICFP '14</span>
+      <span class="date">ACM SIGPLAN Erlang Workshop '14, co-located event at ICFP '14</span>
       <span><a href="http://dl.acm.org/citation.cfm?id=2633451">[ACM]</a> <a href="https://speakerdeck.com/cmeiklejohn/derflow-distributed-deterministic-dataflow-programming-for-erlang">[slides]</a></span>
     </li>
     <li>
     On The Composability of the Riak DT Map: Expanding From Embedded To Multi-Key Structures
       <span class="author">Christopher S. Meiklejohn</span>
-      <span class="date">PaPEC '14, co-hosted event at ACM EuroSys '14</span>
+      <span class="date">PaPEC '14, co-located event at ACM EuroSys '14</span>
       <span><a href="http://dl.acm.org/citation.cfm?doid=2596631.2596635">[ACM]</a> <a href="https://speakerdeck.com/cmeiklejohn/on-the-composability-of-the-riak-dt-map-expanding-from-embedded-to-multi-key-structures">[slides]</a></span>
     </li>
     <li>
       Riak DT Map: A Composable, Convergent Replicated Dictionary
       <span class="author">Russell Brown, Sean Cribbs, Sam Elliott, and Christopher S. Meiklejohn</span>
-      <span class="date">PaPEC '14, co-hosted event at ACM EuroSys '14</span>
+      <span class="date">PaPEC '14, co-located event at ACM EuroSys '14</span>
       <span><a href="http://dl.acm.org/citation.cfm?doid=2596631.2596633">[ACM]</a></span>
     </li>
     <li>
       Riak PG: distributed process groups on dynamo-style distributed storage
       <span class="author">Christopher S. Meiklejohn</span>
-      <span class="date">ACM SIGPLAN Erlang Workshop '13, co-hosted event at ICFP '13</span>
+      <span class="date">ACM SIGPLAN Erlang Workshop '13, co-located event at ICFP '13</span>
       <span><a href="http://dl.acm.org/citation.cfm?id=2505305.2505309">[ACM]</a> <a href="https://speakerdeck.com/cmeiklejohn/riak-pg-distributed-process-groups-on-dynamo-style-distributed-storage">[slides]</a></span>
     </li>
   </ul>
