--- a/research.html
+++ b/research.html
@@ -28,7 +28,7 @@ title: Videos
     <li><a href="https://syncfree.lip6.fr">SyncFree (EU/FP7)</a>
       <p>Large-scale on-line services including social networks and multiplayer games handle huge quantities of frequently changing shared data. Maintaining its consistency is relatively simple in a centralised cloud, but no longer possible due to increased scalability requirements. Instead, data must replicated across several distributed data centres, requiring new principled approaches to consistency that will be explored by the SyncFree project.</p>
     </li>
-    <li><a href="https://lasp-lang.org">Lasp</a>
+    <li><a href="http://lasp-lang.org">Lasp</a>
       <p>Distributed deterministic dataflow programming using conflict-free replicated data types (CRDTs).</p>
     </li>
   </ul>
