--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Christopher Meiklejohn
 ---
 
 <div id="home">
-  <h1>SyncFree</h1>
+  <h1>SyncFree / Lasp</h1>
   <p>Research related to the <a
     href="http://syncfree.lip6.fr">SyncFree</a> project on large-scale
   synchronization-free computation.</p>
