--- a/research.html
+++ b/research.html
@@ -5,7 +5,7 @@ title: Research
 
 <div id="post">
   <h1>Research</h1>
-  <p>The following is a list of my current research interests.</p>
+  <p>My current research interests:</p>
   <h2>Research Interests</h2>
   <p></p>
 
