Update CV; add Erlang Workshop.

--- a/publications.html
+++ b/publications.html
@@ -29,7 +29,15 @@ title: Publications
         <span class="date">PaPoC '15, co-located event at ACM EuroSys '15</span>
         <span><a href="http://dl.acm.org/citation.cfm?id=2745954">[ACM]</a></span>
       </p>
-      </li>
+    </li>
+
+    <li>
+      <p>
+        The Implementation and Use of a Generic Dataflow Behaviour in Erlang
+        <span class="author">Christopher S. Meiklejohn, Peter Van Roy</span>
+        <span class="date">ACM SIGPLAN Erlang Workshop '15, co-located event at ICFP '15</span>
+      </p>
+    </li>
 
     <li>
       <p>
