--- a/publications.html
+++ b/publications.html
@@ -26,7 +26,7 @@ title: Publications
       <p>
         The Implementation and Use of a Generic Dataflow Behaviour in Erlang
         <span class="author">Christopher S. Meiklejohn, Peter Van Roy</span>
-        <span class="date">ACM SIGPLAN Erlang Workshop '15, co-located event at ICFP '15</span>
+        <span class="date">to appear at ACM SIGPLAN Erlang Workshop '15, co-located event at ICFP '15</span>
       </p>
     </li>
 
