--- a/publications.html
+++ b/publications.html
@@ -14,7 +14,8 @@ title: Publications
       <p>
         Lasp: A Language for Distributed, Coordination-Free Programming
         <span class="author">Christopher S. Meiklejohn, Peter Van Roy</span>
-        <span class="date">to appear at The 17th International Symposium on Principles and Practice of Declarative Programming</span>
+        <span class="date">The 17th International Symposium on Principles and Practice of Declarative Programming</span>
+        <span><a href="http://dl.acm.org/citation.cfm?id=2790525">[ACM]</a></span>
       </p>
     </li>
   </ul>
