--- a/publications.html
+++ b/publications.html
@@ -25,6 +25,14 @@ title: Publications
   <ul>
     <li>
       <p>
+        Selective Hearing: An Approach to Distributed, Eventually Consistent Edge Computation
+        <span class="author">Christopher S. Meiklejohn, Peter Van Roy</span>
+        <span class="date">to appear at the Workshop on Planetary-Scale Distributed Systems, co-located event at SRDS 2015</span>
+      </p>
+    </li>
+
+    <li>
+      <p>
         The Implementation and Use of a Generic Dataflow Behaviour in Erlang
         <span class="author">Christopher S. Meiklejohn, Peter Van Roy</span>
         <span class="date">to appear at ACM SIGPLAN Erlang Workshop '15, co-located event at ICFP '15</span>
