--- a/videos.html
+++ b/videos.html
@@ -23,6 +23,14 @@ title: Videos
   <ul>
     <li>
       <p>
+        <a href="https://www.youtube.com/watch?v=AF8fpDzfUOc">Coordination-free Computations</a>
+        <span class="author">Christopher S. Meiklejohn</span>
+        <span class="date">GOTO Chicago 2015, Chicago; IL</span>
+      </p>
+      </li>
+
+    <li>
+      <p>
         <a href="https://www.youtube.com/watch?v=uwpakTIg9r8">Distributed, Eventually Consistent Computations</a>
         <span class="author">Christopher S. Meiklejohn</span>
         <span class="date">Erlang Factory 2015, San Francisco; San Francisco, CA</span>
