--- a/videos.html
+++ b/videos.html
@@ -23,7 +23,7 @@ title: Videos
   <ul>
     <li>
       <p>
-        <a href="https://www.youtube.com/watch?v=AF8fpDzfUOc">Coordination-free Computations</a>
+        <a href="https://www.youtube.com/watch?v=AF8fpDzfUOc">Coordination-Free Computations</a>
         <span class="author">Christopher S. Meiklejohn</span>
         <span class="date">GOTO Chicago 2015, Chicago; IL</span>
       </p>
