--- a/publications.html
+++ b/publications.html
@@ -27,7 +27,7 @@ title: Publications
       <p>
         Selective Hearing: An Approach to Distributed, Eventually Consistent Edge Computation
         <span class="author">Christopher S. Meiklejohn, Peter Van Roy</span>
-        <span class="date">to appear at the Workshop on Planetary-Scale Distributed Systems, co-located event at SRDS 2015</span>
+        <span class="date">to appear at the Workshop on Planetary-Scale Distributed Systems, co-located event at SRDS '15</span>
       </p>
     </li>
 
