--- a/publications.html
+++ b/publications.html
@@ -15,7 +15,8 @@ title: Publications
         Lasp: A Language for Distributed, Coordination-Free Programming
         <span class="author">Christopher S. Meiklejohn, Peter Van Roy</span>
         <span class="date">The 17th International Symposium on Principles and Practice of Declarative Programming</span>
-        <span><a href="http://dl.acm.org/citation.cfm?id=2790525">[ACM]</a></span>
+        <span><a
+            href="http://christophermeiklejohn.com/publications/ppdp-2015-preprint.pdf">[preprint]</a> <a href="http://dl.acm.org/citation.cfm?id=2790525">[ACM]</a></span>
       </p>
     </li>
   </ul>
