--- a/publications.html
+++ b/publications.html
@@ -37,6 +37,7 @@ title: Publications
         The Implementation and Use of a Generic Dataflow Behaviour in Erlang
         <span class="author">Christopher S. Meiklejohn, Peter Van Roy</span>
         <span class="date">to appear at ACM SIGPLAN Erlang Workshop '15, co-located event at ICFP '15</span>
+        <span><a href="http://christophermeiklejohn.com/publications/erlang-workshop-2015-preprint.pdf">[preprint]</a>
       </p>
     </li>
 
