--- a/publications.html
+++ b/publications.html
@@ -15,8 +15,7 @@ title: Publications
         Lasp: A Language for Distributed, Coordination-Free Programming
         <span class="author">Christopher S. Meiklejohn, Peter Van Roy</span>
         <span class="date">The 17th International Symposium on Principles and Practice of Declarative Programming</span>
-        <span><a
-            href="http://christophermeiklejohn.com/publications/ppdp-2015-preprint.pdf">[preprint]</a> <a href="http://dl.acm.org/citation.cfm?id=2790525">[ACM]</a></span>
+        <span><a href="http://christophermeiklejohn.com/publications/ppdp-2015-preprint.pdf">[preprint]</a> <a href="http://dl.acm.org/citation.cfm?id=2790525">[ACM]</a></span>
       </p>
     </li>
   </ul>
@@ -29,6 +28,8 @@ title: Publications
         Selective Hearing: An Approach to Distributed, Eventually Consistent Edge Computation
         <span class="author">Christopher S. Meiklejohn, Peter Van Roy</span>
         <span class="date">to appear at the Workshop on Planetary-Scale Distributed Systems, co-located event at SRDS '15</span>
+        <span><a
+              href="http://christophermeiklejohn.com/publications/wpsds-2015-preprint.pdf">[preprint]</a>
       </p>
     </li>
 
