Add strangeloop video.

--- a/videos.html
+++ b/videos.html
@@ -23,11 +23,20 @@ title: Videos
   <ul>
     <li>
       <p>
+        <a
+              href="https://www.youtube.com/watch?v=lsKaNDj4TrE">Distributed, Eventually Consistent Computations</a>
+        <span class="author">Christopher S. Meiklejohn</span>
+        <span class="date">Strange Loop 2015, St. Louis; MO</span>
+      </p>
+    </li>
+
+    <li>
+      <p>
         <a href="https://www.youtube.com/watch?v=AF8fpDzfUOc">Coordination-Free Computations</a>
         <span class="author">Christopher S. Meiklejohn</span>
         <span class="date">GOTO Chicago 2015, Chicago; IL</span>
       </p>
-      </li>
+    </li>
 
     <li>
       <p>
