Add new publication.

--- a/publications.html
+++ b/publications.html
@@ -116,6 +116,14 @@ title: Publications
   <ul>
     <li>
       <p>
+        A Certain Tendency Of The Database Community
+        <span class="author">Christopher S. Meiklejohn</span>
+        <span class="date">Draft, published 28 Oct 2015</span>
+        <span><a href="http://arxiv.org/abs/1510.08473">[arXiV preprint]</a></span>
+      </p>
+    </li>
+    <li>
+      <p>
         Vector Clocks in Coq: An Experience Report
         <span class="author">Christopher S. Meiklejohn</span>
         <span class="date">Draft, published 17 Jun 2014</span>
