Add thesis proposal draft.

--- a/publications.html
+++ b/publications.html
@@ -7,6 +7,18 @@ title: Publications
   <h1>Publications</h1>
   <p>Publications I've been involved with:</p>
 
+  <h2>Thesis Proposal</h2>
+  <p></p>
+  <ul>
+    <li>
+      <p>
+        A language-level approach to distributed computation with weak synchronization and its application to cloud and edge computing environments.
+        <span class="author">Christopher S. Meiklejohn</span>
+        <span><a href="http://christophermeiklejohn.com/publications/thesis-proposal.pdf">[draft]</a></span>
+      </p>
+    </li>
+  </ul>
+
   <h2>Conferences</h2>
   <p></p>
   <ul>
