--- a/publications.html
+++ b/publications.html
@@ -37,9 +37,19 @@ title: Publications
   <ul>
     <li>
       <p>
+        Declarative, Sliding Window Aggregations for Computations at the Edge
+        <span class="author">Christopher S. Meiklejohn, Seyed H. Heri, Peter Van Roy</span>
+        <span class="date">to appear at the 1st International Workshop on Edge Computing, EdgeCom 2016</span>
+        <span><a
+              href="http://christophermeiklejohn.com/publications/edgecom-2016-preprint.pdf">[preprint]</a>
+      </p>
+    </li>
+
+    <li>
+      <p>
         Selective Hearing: An Approach to Distributed, Eventually Consistent Edge Computation
         <span class="author">Christopher S. Meiklejohn, Peter Van Roy</span>
-        <span class="date">to appear at the Workshop on Planetary-Scale Distributed Systems, co-located event at SRDS '15</span>
+        <span class="date">Workshop on Planetary-Scale Distributed Systems, co-located event at SRDS '15</span>
         <span><a
               href="http://christophermeiklejohn.com/publications/wpsds-2015-preprint.pdf">[preprint]</a>
       </p>
