--- a/publications.html
+++ b/publications.html
@@ -38,7 +38,7 @@ title: Publications
     <li>
       <p>
         Declarative, Sliding Window Aggregations for Computations at the Edge
-        <span class="author">Christopher S. Meiklejohn, Seyed H. Heri, Peter Van Roy</span>
+        <span class="author">Christopher S. Meiklejohn, Seyed H. Haeri, Peter Van Roy</span>
         <span class="date">to appear at the 1st International Workshop on Edge Computing, EdgeCom 2016</span>
         <span><a
               href="http://christophermeiklejohn.com/publications/edgecom-2016-preprint.pdf">[preprint]</a>
