Remove to appear section.

--- a/publications.html
+++ b/publications.html
@@ -59,7 +59,7 @@ title: Publications
       <p>
         The Implementation and Use of a Generic Dataflow Behaviour in Erlang
         <span class="author">Christopher S. Meiklejohn, Peter Van Roy</span>
-        <span class="date">to appear at ACM SIGPLAN Erlang Workshop '15, co-located event at ICFP '15</span>
+        <span class="date">ACM SIGPLAN Erlang Workshop '15, co-located event at ICFP '15</span>
         <span><a href="http://christophermeiklejohn.com/publications/erlang-workshop-2015-preprint.pdf">[preprint]</a> <a href="http://dl.acm.org/citation.cfm?id=2804300">[ACM]</a>
       </p>
     </li>
