--- a/publications.html
+++ b/publications.html
@@ -138,6 +138,15 @@ title: Publications
   <ul>
     <li>
       <p>
+        Declarative, Secure, Convergent Edge Computation
+        <span class="author">Christopher S. Meiklejohn</span>
+        <span class="date">Draft, published 13 Nov 2015</span>
+        <span><a
+              href="http://christophermeiklejohn.com/publications/obt-2016-draft.pdf">[OBT 2016 draft]</a></span>
+      </p>
+    </li>
+    <li>
+      <p>
         A Certain Tendency Of The Database Community
         <span class="author">Christopher S. Meiklejohn</span>
         <span class="date">Draft, published 28 Oct 2015</span>
