Remove original draft.

--- a/publications.html
+++ b/publications.html
@@ -141,7 +141,7 @@ title: Publications
         Declarative, Secure, Convergent Edge Computation
         <span class="author">Christopher S. Meiklejohn</span>
         <span class="date">Draft, published 13 Nov 2015</span>
-        <span><a href="http://christophermeiklejohn.com/publications/obt-2016-draft.pdf">[OBT 2016 draft]</a> <a href="http://arxiv.org/abs/1512.04898">[arXiv preprint]</a> </span>
+        <span> <a href="http://arxiv.org/abs/1512.04898">[arXiv preprint]</a> </span>
       </p>
     </li>
     <li>
