--- a/publications.html
+++ b/publications.html
@@ -39,7 +39,7 @@ title: Publications
       <p>
         Declarative, Sliding Window Aggregations for Computations at the Edge
         <span class="author">Christopher S. Meiklejohn, Seyed H. Haeri, Peter Van Roy</span>
-        <span class="date">to appear at the 1st International Workshop on Edge Computing, EdgeCom 2016</span>
+        <span class="date">1st International Workshop on Edge Computing, EdgeCom 2016, co-located event at CCNC 2016</span>
         <span><a
               href="http://christophermeiklejohn.com/publications/edgecom-2016-preprint.pdf">[preprint]</a>
       </p>
