--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@ title: Christopher Meiklejohn
   </ul>
 
   <h1>Programming Models and Languages for Distributed Computing</h1>
-  <p>Series of posts on programming models and languages for distributed computing.</p>
+  <p>Series of posts on programming models and languages for distributed
+  computing.  I'm accumulating this into a <a
+    href="https://github.com/cmeiklejohn/PMLDC">reference manual</a>, of
+  sorts.</p>
   <ul class="posts">
     {% for post in site.posts %}
       {% if post.group == "pl" %}
