--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@ title: Christopher Meiklejohn
   </ul>
 
   <h1>Programming Models and Languages for Distributed Computing</h1>
-  <p>Work in progress <a href="https://github.com/cmeiklejohn/PMLDC">book</a> on distributed computing and programming languages.</p>
+  <p>Work in progress <a
+    href="https://github.com/cmeiklejohn/PMLDC">seminar curriculum</a> on distributed computing and programming languages.</p>
   <ul class="posts">
     {% for post in site.posts %}
       {% if post.group == "pl" %}
