--- a/publications.html
+++ b/publications.html
@@ -37,6 +37,15 @@ title: Publications
   <ul>
     <li>
       <p>
+        Towards Property-Based Consistency Verification
+        <span class="author">Paolo Viotti, Christopher S. Meiklejohn, Marko Vukolic</span>
+        <span class="date">PaPoC '16, co-located event at ACM EuroSys '16</span>
+        <span><a href="http://www.eurecom.fr/en/publication/4874/detail/towards-property-based-consistency-verification">[preprint]</a>
+      </p>
+    </li>
+
+    <li>
+      <p>
         Declarative, Sliding Window Aggregations for Computations at the Edge
         <span class="author">Christopher S. Meiklejohn, Seyed H. Haeri, Peter Van Roy</span>
         <span class="date">1st International Workshop on Edge Computing, EdgeCom 2016, co-located event at CCNC 2016</span>
