--- a/publications.html
+++ b/publications.html
@@ -40,7 +40,7 @@ title: Publications
         Towards Property-Based Consistency Verification
         <span class="author">Paolo Viotti, Christopher S. Meiklejohn, Marko Vukolic</span>
         <span class="date">PaPoC '16, co-located event at ACM EuroSys '16</span>
-        <span><a href="http://www.eurecom.fr/en/publication/4874/detail/towards-property-based-consistency-verification">[preprint]</a>
+        <span><a href="http://www.eurecom.fr/en/publication/4874/detail/towards-property-based-consistency-verification">[EURECOM]</a>
       </p>
     </li>
 
