--- a/publications.html
+++ b/publications.html
@@ -37,6 +37,14 @@ title: Publications
   <ul>
     <li>
       <p>
+        Worlds of Events: Deduction with Partial Knowledge about Causality.
+        <span class="author">Seyed Hossein Haeri, Peter Van Roy, Carlos Baquero and Christopher Meiklejohn.</span>
+        <span class="date">9th Interaction and Concurrency Experience Satellite Workshop of DisCoTec 2016</span>
+      </p>
+      </li>
+
+    <li>
+      <p>
         Towards Property-Based Consistency Verification
         <span class="author">Paolo Viotti, Christopher S. Meiklejohn, Marko Vukolic</span>
         <span class="date">PaPoC '16, co-located event at ACM EuroSys '16</span>
