--- a/publications.html
+++ b/publications.html
@@ -38,7 +38,7 @@ title: Publications
     <li>
       <p>
         Worlds of Events: Deduction with Partial Knowledge about Causality.
-        <span class="author">Seyed Hossein Haeri, Peter Van Roy, Carlos Baquero and Christopher Meiklejohn.</span>
+        <span class="author">Seyed Hossein Haeri, Peter Van Roy, Carlos Baquero and Christopher S. Meiklejohn.</span>
         <span class="date">9th Interaction and Concurrency Experience Satellite Workshop of DisCoTec 2016</span>
       </p>
       </li>
