Add Dynamic Path Contraction preprint.

--- a/publications.html
+++ b/publications.html
@@ -155,6 +155,14 @@ title: Publications
   <ul>
     <li>
       <p>
+        Dynamic Path Contraction for Distributed, Dynamic Dataflow Languages
+        <span class="author">Borja Arnau de Régil Basáñez, Christopher S. Meiklejohn</span>
+        <span class="date">Draft, published 5 Sep 2016</span>
+        <span> <a href="http://arxiv.org/abs/1609.01068">[arXiv preprint]</a> </span>
+      </p>
+    </li>
+    <li>
+      <p>
         Declarative, Secure, Convergent Edge Computation
         <span class="author">Christopher S. Meiklejohn</span>
         <span class="date">Draft, published 13 Nov 2015</span>
