Add PPDP 17 preprint.

--- a/publications.html
+++ b/publications.html
@@ -30,6 +30,14 @@ title: Publications
         <span><a href="http://christophermeiklejohn.com/publications/ppdp-2015-preprint.pdf">[preprint]</a> <a href="http://dl.acm.org/citation.cfm?id=2790525">[ACM]</a></span>
       </p>
     </li>
+    <li>
+      <p>
+        Practical Evaluation of the Lasp Programming Model at Large Scale
+        <span class="author">Christopher S. Meiklejohn, Vitor Enes, Junghun Yoo, Carlos Baquero, Peter Van Roy, Annette Bieniusa</span>
+        <span class="date">The 19th International Symposium on Principles and Practice of Declarative Programming</span>
+        <span><a href="http://christophermeiklejohn.com/publications/ppdp-2017-preprint.pdf">[preprint]</a></span>
+      </p>
+    </li>
   </ul>
 
   <h2>Workshops</h2>
